# pcdiff-implant

./: .dockerignore  .env.perun  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EVALUATION.md  IMPLEMENTATION_PAPER.md  INSTALL.md  MIGRATION.md  QUICKSTART.md  README.md  SETUP.md  SINGLE_INFERENCE.md  SOUL-CTO.md  SOUL.md  WEB_VIEWER_PLAN.txt  WIKI.md  create_train_split.py  example_single_inference.sh  package-lock.json  pitchdeck.md  pyproject.toml  ralph.sh  rectified_flow.py  requirements.txt  run_single_inference.py  run_skullbreak_eval.py  setup_uv.sh  train_m1.py  wiki-home.md  wiki-sidebar.md
.claude/: settings.json
autoresearch/: README.md  RUNPOD_RUNBOOK.md  bootstrap_pod.sh  check_voxelization_env.py  plot_experiments.py  prepare_pcdiff.py  program_pcdiff.md  run_experiments.py  run_manual_variant_campaign.py  run_voxelization_variant_campaign.py  setup_runpod.py  train_pcdiff.py  upload_data.py
benchmarking/: __init__.py  baseline_jobs.json  baseline_reproduction_audit_2026-03-22.md  baseline_reproduction_report_2026-03-24.md  baseline_reproduction_report_2026-03-25.md  baseline_results.json  benchmark_spec_2026-03-22.md  dim6_ablation_plan.md  pareto_bench.py  pareto_plot.py  plot_ablation.py  preflight_audit.py  reporting.py  select_stage1_candidate.py  stage1_ablation_matrix.py  stage1_ablation_workflow_2026-03-22.md  test_cran2_endpoint.py
pcdiff/: NCCL-TIMEOUT-FIX.md  QUICK-START-RESUME.md  README.md  TROUBLESHOOTING.md  distributed-training.md  eval_e2e.py  proxy_eval.py  proxy_validation_subset.json  pyproject.toml  quick_eval_ddpm.py  test_completion.py  test_completion_distributed.py  train_completion.py  verify_acceptance.py
pcdiff/datasets/: skullbreak_data.py  skullfix_data.py
pcdiff/datasets/SkullBreak/: skullbreak.csv  test.csv  train.csv
pcdiff/eval/: hyperparam_lr1e3_50ep_ddpm1000.json  quick_ddpm1000_20260120_091423.json
pcdiff/model/: pvcnn_completion.py
pcdiff/modules/: __init__.py  ball_query.py  frustum.py  loss.py  pointnet.py  pvconv.py  voxelization.py
pcdiff/modules/functional/: __init__.py  backend.py  cpu_backend.py  devoxelization.py  grouping.py  interpolatation.py  sampling.py  voxelization.py
pcdiff/modules/functional/src/grouping/: grouping.cpp  grouping.cu  grouping.cuh
pcdiff/runs/: .gitignore  .gitkeep
pcdiff/utils/: convert_cam_params.py  convert_to_web.py  file_utils.py  metrics.py  preproc_skullbreak.py  preproc_skullfix.py  split_skullbreak.py  split_skullfix.py  visualize.py
voxelization/: README.md  create_skullbreak_manifests.py  eval_metrics.py  generate.py  precompute_psr_grids.py  pyproject.toml  train.py
voxelization/configs/: default.yaml  gen_skullbreak.yaml  gen_skullbreak_ddpm.yaml  gen_skullfix.yaml  train_skullbreak.yaml  train_skullfix.yaml
voxelization/src/: config.py  data_loader.py  dpsr.py  eval.py  generation.py  manifests.py  model.py  model_rgb.py  optimization.py  postprocess.py  training.py  utils.py  visualize.py
voxelization/src/data/: __init__.py  core.py  fields.py  transforms.py
voxelization/src/network/: __init__.py  decoder.py  encoder.py  net_rgb.py  unet.py  unet3d.py  utils.py
voxelization/utils/: augment_skullbreak.py  augment_skullfix.py  preproc_skullbreak.py  preproc_skullfix.py  split_skullbreak.py  split_skullfix.py
(+511 files in other folders)
